--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: web_browser_detect
 description: FlutterWeb browser detection package.
 version: 1.0.1
-homepage: https://github.com/tomaschyly/web_browser_detect
+homepage: https://tomas-chyly.com/en/project/web-browser-detect-flutter/
 repository: https://github.com/tomaschyly/web_browser_detect
 issue_tracker: https://github.com/tomaschyly/web_browser_detect/issues
 
