--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: web_browser_detect
-description: FlutterWeb browser detection package.
+description: Flutter Web browser detection package. This package allows you to detect which browser and its version is in use.
 version: 1.0.2
 homepage: https://tomas-chyly.com/en/project/web-browser-detect-flutter/
 repository: https://github.com/tomaschyly/web_browser_detect
