--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: web_browser_detect
 description: Flutter Web browser detection package. This package allows you to detect which browser and its version is in use.
-version: 1.0.2+2
+version: 1.0.3
 homepage: https://tomas-chyly.com/en/project/web-browser-detect-flutter/
 repository: https://github.com/tomaschyly/web_browser_detect
 issue_tracker: https://github.com/tomaschyly/web_browser_detect/issues
@@ -12,6 +12,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  universal_html: ^1.2.4
 
 dev_dependencies:
   flutter_test:
