--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: web_browser_detect
 description: Flutter Web browser detection package. This package allows you to detect which browser and its version is in use.
-version: 1.0.4
+version: 1.0.4+1
 homepage: https://tomas-chyly.com/en/project/web-browser-detect-flutter/
 repository: https://github.com/tomaschyly/web_browser_detect
 issue_tracker: https://github.com/tomaschyly/web_browser_detect/issues
