--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: web_browser_detect
 description: Flutter Web browser detection package. This package allows you to detect which browser and its version is in use.
-version: 1.0.4+1
+version: 1.1.0
 homepage: https://tomas-chyly.com/en/project/web-browser-detect-flutter/
 repository: https://github.com/tomaschyly/web_browser_detect
 issue_tracker: https://github.com/tomaschyly/web_browser_detect/issues
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.17.0 <2.0.0"
+  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
