--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,24 @@
 name: web_browser_detect
 description: Flutter Web browser detection package. This package allows you to detect which browser and its version is in use.
-version: 2.0.3
+version: 2.1.0
 homepage: https://tomas-chyly.com/en/project/web-browser-detect-flutter/
 repository: https://github.com/tomaschyly/web_browser_detect
 issue_tracker: https://github.com/tomaschyly/web_browser_detect/issues
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  universal_html: ^2.0.8
+  web: ^1.1.1
 
 dev_dependencies:
+  custom_lint: ^0.7.5
   flutter_test:
     sdk: flutter
+  very_good_analysis: ^7.0.0
 
 flutter:
